part_3/pingpong-application/manifests/pingpong-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app-dep
  namespace: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
        - name: pingpong-app
          image: cdaniel999/pingpong-app:latest
          imagePullPolicy: "Always"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 5000
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 5000
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "128Mi"
              cpu: "100m"
