part_3/pingpong-application/manifests/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: log-output
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      namespace: log-output
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.0
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data 
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: todo-app
      spec:
        accessModes: ["ReadWriteOnce"]
        #storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
