part_3/pingpong-application/manifests/pingpong-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
  namespace: log-output
spec:
  type: NodePort
  selector:
    app: pingpong-app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
